frontend user interface added

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -29,6 +29,7 @@ ENV UV_LINK_MODE=copy
 RUN apt-get update && apt-get install -y \
     libpq-dev \
     gcc \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 
