--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "fastapi>=0.116.1",
     "llama-index>=0.13.0",
     "llama-index-callbacks-arize-phoenix>=0.6.0",
+    "llama-index-embeddings-huggingface>=0.6.0",
+    "llama-index-llms-ollama>=0.7.1",
     "llama-index-vector-stores-qdrant>=0.7.1",
     "openai>=1.99.0",
     "opentelemetry-api>=1.36.0",
